--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ hdrhistogram = "7.5.4"
 rand = "0.9.2"
 rand_distr = "0.5.1"
 redb = "3.1.0"
+sled = "0.34.7"
 tempfile = "3.23.0"
 thousands = "0.2.0"
